fix selection, coloring/contrast of the error overlay

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
 
   --color-green: #67ffde;
   --color-white: #ffffff;
+  --color-black: #000000;
   --color-danger: #CF6679;
 
   --color-slate-1: rgba(0, 0, 0, 0);
